Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,9 +1,9 @@
-<li></li>Yankees</li>
-"Mets"
-"Giants"
-"Jets"
-"Knicks"
-"Nets"
-"Islanders"
-"Rangers"
-"Devils"
+<li>Yankees</li>
+<li>Mets</li>
+<li>Giants</li>
+<li>Jets</li>
+<li>Knicks</li>
+"<li>Nets</li>"
+"<li>Islanders</li>"
+"<li>Rangers</li>"
+"<li>Devils</li>"
