Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -3,7 +3,7 @@
 <li>Giants</li>
 <li>Jets</li>
 <li>Knicks</li>
-"<li>Nets</li>"
-"<li>Islanders</li>"
-"<li>Rangers</li>"
-"<li>Devils</li>"
+<li>Nets</li>
+<li>Islanders</li>
+<li>Rangers</li>
+<li>Devils</li>
